<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_width="@dimen/twenty_grid_unit">

    <ImageView
        android:id="@+id/imageViewMovieListItemImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:adjustViewBounds="true"
        tools:layout_height="224dp"/>

    <ImageView
        android:id="@+id/imageViewMovieListItemStar"
        android:layout_width="@dimen/five_grid_unit"
        android:layout_height="@dimen/five_grid_unit"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/two_grid_unit"
        android:src="@drawable/ic_star"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/imageViewMovieListItemFavorite"
        android:layout_width="@dimen/four_and_half_grid_unit"
        android:layout_height="@dimen/seven_grid_unit"
        android:adjustViewBounds="true"
        android:background="@drawable/selector_favorite" />
</FrameLayout>
